fix config file

--- a/config.yml
+++ b/config.yml
@@ -2,6 +2,6 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci:node:10
+      - image: circleci/node:10
     steps:
       - run: echo "hello world"
